--- a/index.html
+++ b/index.html
@@ -1,12 +1,1 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
-    <title>radon-ui</title>
-  </head>
-  <body>
-    <app></app>
-    <!-- built files will be auto injected -->
-  </body>
-</html>
+<!DOCTYPE html><html><head><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no"><title>radon-ui</title><link href=static/css/app.css rel=stylesheet><link href=static/css/dist.css rel=stylesheet></head><body><app></app><script type=text/javascript src=static/js/manifest.d8a87578df69f952772e.js></script><script type=text/javascript src=static/js/vendor.911888ab94f416fa33a0.js></script><script type=text/javascript src=static/js/app.9ee8e039e0535cba6eb0.js></script><script type=text/javascript src=static/js/dist.a1c506df84829563d39d.js></script></body></html>
