--- a/index.html
+++ b/index.html
@@ -1,1 +1,7 @@
-<!DOCTYPE html><html><head><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no"><title>radon-ui</title><link href=static/css/app.css rel=stylesheet><link href=static/css/dist.css rel=stylesheet></head><body><app></app><script type=text/javascript src=static/js/manifest.cf72b4518e3a06ae82c2.js></script><script type=text/javascript src=static/js/vendor.1c313f58826c18adeee6.js></script><script type=text/javascript src=static/js/app.4e2bae899f240c4e46c2.js></script><script type=text/javascript src=static/js/dist.af7fabd0a09ea3f787ac.js></script></body></html>
+<!DOCTYPE html><html><head><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no"><title>radon-ui</title><link href=static/css/app.css rel=stylesheet><link href=static/css/dist.css rel=stylesheet></head><body><app></app><script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-83326118-1', 'auto');
+      ga('send', 'pageview');</script><script type=text/javascript src=static/js/manifest.7c5df42719ed1cc599f5.js></script><script type=text/javascript src=static/js/vendor.99fae24954552dce6878.js></script><script type=text/javascript src=static/js/app.d45a32a4f64041cee5ea.js></script><script type=text/javascript src=static/js/dist.a99835a77628902b8b44.js></script></body></html>
